--- a/V2_of_CP_Rec_Center_Weather.ipynb
+++ b/V2_of_CP_Rec_Center_Weather.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jinburge/FinalProject/blob/main/V2_of_CP_Rec_Center_Weather.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jinburge/CP-Rec-Center/blob/main/V2_of_CP_Rec_Center_Weather.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -32,7 +32,7 @@
         "\n",
         "#### By Jin Burge (jbburge@calpoly.edu) and Athena Kwok (akwok01@calpoly.edu)\n",
         "\n",
-        "#### Feburary 28, 2023\n"
+        "#### March 09, 2023\n"
       ],
       "metadata": {
         "id": "nVJTZYDnJHr5"
@@ -167,7 +167,7 @@
         "weather_df = pd.DataFrame(data, columns = cols)\n",
         "\n",
         "# Convert degrees Celsius to Fahrenheit\n",
-        "weather_df[\"Average Temperature (F)\"] = 1.8*weather_df[\"tavg\"] + 32\n"
+        "weather_df[\"Average Temperature (F)\"] = 1.8*weather_df[\"tavg\"] + 32"
       ],
       "metadata": {
         "id": "amj4T4sJvfpo"
@@ -208,8 +208,7 @@
         "url = 'https://raw.githubusercontent.com/jinburge/FinalProject/main/daily_rain.csv'\n",
         "daily_weather = pd.read_csv(url)\n",
         "\n",
-        "\n",
-        "daily_weather\n"
+        "daily_weather"
       ],
       "metadata": {
         "colab": {
@@ -1998,7 +1997,7 @@
         "match_series = pd.to_datetime(merged_daily2['Date']).map(isBusinessDay)\n",
         "merged_daily2 = merged_daily2[match_series]\n",
         "\n",
-        "merged_daily2\n"
+        "merged_daily2"
       ],
       "metadata": {
         "colab": {
@@ -2235,6 +2234,7 @@
       "cell_type": "code",
       "source": [
         "merged_daily3 = merged_daily2.drop(merged_daily2[merged_daily2.prcp == 0].index)\n",
+        "\n",
         "merged_daily3"
       ],
       "metadata": {
@@ -3758,7 +3758,6 @@
       "cell_type": "code",
       "source": [
         "fig, ax = plt.subplots(figsize=(12, 8))\n",
-        "\n",
         "merged_daily.plot(x = 'Date', y = 'tavg', ax = ax) \n",
         "merged_daily.plot(x = 'Date', y = 'Entrances', ax = ax, secondary_y = True) \n",
         "plt.title(\"Average Temperature and Entrances Over Time\", fontsize = 'x-large', fontweight = 'bold')\n",
@@ -3930,8 +3929,7 @@
         " \n",
         "# Apply the pearsonr()\n",
         "corr, _ = pearsonr(Entrances, Temp)\n",
-        "print('Pearsons correlation: %.3f' % corr)\n",
-        " "
+        "print('Pearsons correlation: %.3f' % corr)"
       ],
       "metadata": {
         "colab": {
@@ -4024,7 +4022,6 @@
       "cell_type": "code",
       "source": [
         "fig, ax = plt.subplots(figsize=(20, 8))\n",
-        "\n",
         "merged_hourly.plot(x = 'time', y = 'temp', ax = ax) \n",
         "merged_hourly.plot(x = 'time', y = 'Entrances', ax = ax, secondary_y = True) \n",
         "plt.title(\"Hourly Temperature and Entrances Over Time\", fontsize = 'x-large', fontweight = 'bold')\n",
@@ -4186,7 +4183,6 @@
       "cell_type": "code",
       "source": [
         "fig, ax = plt.subplots(figsize=(20, 8))\n",
-        "\n",
         "merged_daily.plot(x = 'Date', y = 'prcp', ax = ax) \n",
         "merged_daily.plot(x = 'Date', y = 'Entrances', ax = ax, secondary_y = True) \n",
         "plt.title(\"Daily Precipitation and Entrances Over Time\", fontsize = 'x-large', fontweight = 'bold')\n",
@@ -4383,7 +4379,6 @@
       "cell_type": "code",
       "source": [
         "fig, ax = plt.subplots(figsize=(20, 8))\n",
-        "\n",
         "merged_hourly.plot(x = 'time', y = 'prcp', ax = ax) \n",
         "merged_hourly.plot(x = 'time', y = 'Entrances', ax = ax, secondary_y = True) \n",
         "plt.title(\"Hourly Precipitation and Entrances Over Time\", fontsize = 'x-large', fontweight = 'bold')\n",
@@ -4513,7 +4508,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The scatterplot revealing observations without holidays, weekends, and non-rainy days leaves only 12 observations remaining, and also illustrates no noticeable pattern or trend. \n"
+        "The scatterplot revealing observations without holidays, weekends, and non-rainy days leaves 73 observations remaining, and also illustrates no noticeable pattern or trend. \n"
       ],
       "metadata": {
         "id": "Xko4IAbykEQG"
@@ -4560,7 +4555,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The Pearson’s correlation test to measure the correlation between hourly entrances and precipitation results in a value of -0.190, indicating an extremely weak negative association, essentially indicating no association. \n"
+        "The Pearson’s correlation test to measure the correlation between hourly entrances and precipitation results in a value of -0.190, indicating an extremely weak positive association, essentially indicating no association. \n"
       ],
       "metadata": {
         "id": "DZ6wt7MCkN_X"
@@ -4597,6 +4592,30 @@
       ],
       "metadata": {
         "id": "NlmZWh8LjCBa"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Work Cited "
+      ],
+      "metadata": {
+        "id": "F20D_huW61lu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Cal Poly Rec Center Entrance Data (Sept. 12, 2022, to Feb. 20, 2023) was given by Cal Poly ASI\n",
+        "\n",
+        "Weather Data in Python: https://github.com/meteostat/meteostat-python\n",
+        "\n",
+        "Descriptions for the Meteostat package: https://pythonsimplified.com/how-to-get-weather-data-in-python-using-meteostat/\n",
+        "\n",
+        "How to Obtain Weather Forecase Data: https://towardsdatascience.com/obtain-historical-weather-forecast-data-in-csv-format-using-python-5a6c090fc828"
+      ],
+      "metadata": {
+        "id": "2Yl34MGa64ql"
       }
     }
   ]
